LIBITD-294. Prepare Wufoo Connector 1.0 release
Modify README.md after reviewing it

https://issues.umd.edu/browse/LIBITD-294